# volt

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  flutter.rs  fs.rs  git.rs  instance.rs  lsp.rs  main.rs  pty.rs  system.rs  watcher.rs
src/js/: analyzer.js  app.js  editor.js  emulator.js  file-tree.js  quick-open.js  search.js  settings.js  status-bar.js  terminal.js  utils.js
src/styles/: main.css
