[package]
name = "volt"
version = "0.4.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "6"
sysinfo = "0.34"
notify = "8.2.0"
base64 = "0.22"
tokio = "1"
regex = "1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSResponder", "NSView", "NSWindow"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
